--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ color:black"><span style="font-variant-ligatures: normal;font-variant-caps: norm
 orphans: 2;text-align:start;widows: 2;-webkit-text-stroke-width: 0px;
 text-decoration-thickness: initial;text-decoration-style: initial;text-decoration-color: initial;
 float:none;word-spacing:0px">,&nbsp;</span></span><b><span style="font-size:
-10.0pt;line-height:107%;font-family:&quot;Verdana&quot;,sans-serif;color:#C00000"><a href="mailto:hanouskova.garnetta@hotmail.com" style="font-variant-ligatures: normal;font-variant-caps: normal;orphans: 2;
-text-align:start;widows: 2;-webkit-text-stroke-width: 0px;word-spacing:0px"><span style="color:#C00000;text-decoration:none;text-underline:none">hanouskova.garnetta@hotmail.com</span></a></span></b><span style="font-size:10.0pt;line-height:107%;font-family:&quot;Verdana&quot;,sans-serif;
+10.0pt;line-height:107%;font-family:&quot;Verdana&quot;,sans-serif;color:#C00000"><a href="mailto:hanouskova.garnetta@aol.com" style="font-variant-ligatures: normal;font-variant-caps: normal;orphans: 2;
+text-align:start;widows: 2;-webkit-text-stroke-width: 0px;word-spacing:0px"><span style="color:#C00000;text-decoration:none;text-underline:none">hanouskova.garnetta@aol.com</span></a></span></b><span style="font-size:10.0pt;line-height:107%;font-family:&quot;Verdana&quot;,sans-serif;
 color:black"><span style="font-variant-ligatures: normal;font-variant-caps: normal;
 orphans: 2;text-align:start;widows: 2;-webkit-text-stroke-width: 0px;
 text-decoration-thickness: initial;text-decoration-style: initial;text-decoration-color: initial;
