--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@ text-decoration-style: initial;text-decoration-color: initial;word-spacing:
 orphans: 2;text-align:start;widows: 2;-webkit-text-stroke-width: 0px;
 text-decoration-thickness: initial;text-decoration-style: initial;text-decoration-color: initial;
 float:none;word-spacing:0px">Vaše studijní referentka:&nbsp;</span></span><b><span style="font-size:10.0pt;line-height:107%;font-family:&quot;Verdana&quot;,sans-serif;
-color:#C00000"><span style="color:#C00000;text-decoration:none;text-underline:none">Garnetta Hanousková</span></a></span></b><span style="font-size:10.0pt;line-height:107%;font-family:&quot;Verdana&quot;,sans-serif;
+color:#C00000"><span style="color:#C00000;text-decoration:none;text-underline:none">Zdeňka Hanousková</span></a></span></b><span style="font-size:10.0pt;line-height:107%;font-family:&quot;Verdana&quot;,sans-serif;
 color:black"><span style="font-variant-ligatures: normal;font-variant-caps: normal;
 orphans: 2;text-align:start;widows: 2;-webkit-text-stroke-width: 0px;
 text-decoration-thickness: initial;text-decoration-style: initial;text-decoration-color: initial;
 float:none;word-spacing:0px">,&nbsp;</span></span><b><span style="font-size:
-10.0pt;line-height:107%;font-family:&quot;Verdana&quot;,sans-serif;color:#C00000"><a href="mailto:hanouskova.garnetta@aol.com" style="font-variant-ligatures: normal;font-variant-caps: normal;orphans: 2;
-text-align:start;widows: 2;-webkit-text-stroke-width: 0px;word-spacing:0px"><span style="color:#C00000;text-decoration:none;text-underline:none">hanouskova.garnetta@aol.com</span></a></span></b><span style="font-size:10.0pt;line-height:107%;font-family:&quot;Verdana&quot;,sans-serif;
+10.0pt;line-height:107%;font-family:&quot;Verdana&quot;,sans-serif;color:#C00000"><a href="mailto:hanouskova@petml.com" style="font-variant-ligatures: normal;font-variant-caps: normal;orphans: 2;
+text-align:start;widows: 2;-webkit-text-stroke-width: 0px;word-spacing:0px"><span style="color:#C00000;text-decoration:none;text-underline:none">hanouskova@petml.com</span></a></span></b><span style="font-size:10.0pt;line-height:107%;font-family:&quot;Verdana&quot;,sans-serif;
 color:black"><span style="font-variant-ligatures: normal;font-variant-caps: normal;
 orphans: 2;text-align:start;widows: 2;-webkit-text-stroke-width: 0px;
 text-decoration-thickness: initial;text-decoration-style: initial;text-decoration-color: initial;
